# libmelicus

./: CMakeLists.txt  README.md  audio_status.hpp  build.sh  cmus_get_status.cpp  cmus_get_status.h  data_struct.h  init.sh  main.cpp  mpd_get_status.cpp  mpd_get_status.h  song_metadata.h
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.c  main.cpp
libmelicus/: CMakeLists.txt  audio_status.cpp  audio_status.h  audio_status.hpp  cmus_get_status.cpp  error_enum.h  mpd_get_status.cpp  mpv_status.cpp  song_metadata_convert.c  song_metadata_convert.h  task.h  utils.cpp  utils.h
libmelicus/player_backend/: cmus_status.cpp  deadbeef_status.cpp  moc_status.cpp  mpd_status.cpp  mpv_status.cpp
tests/: test_task.cpp
